# tic-tac-toe

./: .dockerignore  .firebaserc  .gitignore  CLEANUP_SUMMARY.md  CLOUD_RUN_DEPLOYMENT.md  DEPLOYMENT_ALTERNATIVE.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.alphazero  Dockerfile.backup  Dockerfile.tensorflow  Dockerfile.tensorflow-base  INSTALLATION_STEPS.md  MIGRATION_GUIDE.md  README.md  cloudbuild.yaml  deploy-alphazero.sh  deploy.sh  firebase.json  requirements.txt
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
backend/: env.example  env.production  firebase_main.py  game_logic.py  main.py  main_old.py  requirements.txt  requirements_alphazero.txt  requirements_docker.txt  server.py  server_full.py  server_hybrid.py  server_simple.py  test_alphazero.py  test_conversion_simple.py  test_firebase.py  test_firebase_local.py
examples/: simplified_usage.py
frontends/console/: args.py  players.py  renderers.py
frontends/gui/: __main__.py  board.py  engine.py
frontends/web/: index.html  package-lock.json  package.json  vite.config.js
functions/: main.py
lib-neuralnet/: __init__.py  pyproject.toml
lib-tic-tac-toe/: pyproject.toml
lib-tic-tac-toe-ai/: __init__.py  pyproject.toml
lib-tic-tac-toe-ai/src/tic_tac_toe_ai/models/: __init__.py
lib-tic-tac-toe-ai/training/: tic_tac_toe_alpha_zero.py
neuralnet/: __init__.py  pyproject.toml
neuralnet/models/: players.py
neuralnet/models/az_model/: checkpoint--1.index
neuralnet/src/models/: players.py
neuralnet/src/models/az_model/: config.json
(+16 files in other folders)
