[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lib-tic-tac-toe-ai"
version = "1.0.0"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.26.4",
    "tensorflow>=2.16.1",
    "open_spiel>=1.4",
    "codetiming>=1.4.0",
    "absl-py>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]
